fix meta, move restart service to handlers

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,1 +1,8 @@
 ---
+- name: restart vector service
+  become: true
+  ansible.builtin.service:
+    name: vector
+    state: started
+    daemon_reload: true
+  listen: restart-vector
