set example config, add molecule verify assertion

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -3,6 +3,7 @@
   hosts: all
   gather_facts: false
   tasks:
-  - name: Example assertion
-    ansible.builtin.assert:
-      that: true
+  - name: ensure vector service started
+    ansible.builtin.service:
+      name: vector
+      state: started
