--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
-- name: vector | install archive manager
+- name: Vector | install archive manager
   ansible.builtin.include_tasks:
     file: "pre_install/{{ ansible_pkg_mgr }}.yml"
-- name: vector | get distrib
+- name: Vector | get distrib
   ansible.builtin.get_url:
     url: "https://packages.timber.io/vector/{{ vector_version }}/vector-{{ vector_version }}-x86_64-unknown-linux-musl.tar.gz"
     dest: "./vector-{{ vector_version }}-x86_64-unknown-linux-musl.tar.gz"
     mode: "755"
-- name: vector | unpack distrib
+- name: Vector | unpack distrib
   ansible.builtin.unarchive:
     src: "./vector-{{ vector_version }}-x86_64-unknown-linux-musl.tar.gz"
     dest: "./"
@@ -19,7 +19,7 @@
     dest: "/usr/local/bin/"
     remote_src: true
     mode: "755"
-- name: vector | check installed version
+- name: Vector | check installed version
   ansible.builtin.command:
     cmd: vector --version
   register: result
@@ -27,7 +27,7 @@
     - 'vector_version not in result.stdout'
   tags:
     - vector_check_version
-- name: vector | create data dir
+- name: Vector | create data dir
   become: true
   ansible.builtin.file:
     mode: "755"
@@ -35,12 +35,12 @@
     group: "{{ ansible_effective_group_id }}"
     path: "{{ vector_config_dir }}"
     state: "directory"
-- name: vector | template config
+- name: Vector | template config
   ansible.builtin.template:
     src: "templates/vector.config.j2"
     dest: "{{ vector_config_dir }}/vector.yaml"
     mode: "755"
-- name: vector | register as service
+- name: Vector | register as service
   become: true
   ansible.builtin.template:
     src: "templates/vector.service.j2"
