--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,7 +12,7 @@
     src: "./vector-{{ vector_version }}-x86_64-unknown-linux-musl.tar.gz"
     dest: "./"
     remote_src: true
-- name: vector | install
+- name: Vector | install
   become: true
   ansible.builtin.copy:
     src: "vector-x86_64-unknown-linux-musl/bin/vector"
