--- a/tasks/pre_install/yum.yml
+++ b/tasks/pre_install/yum.yml
@@ -1,5 +1,5 @@
 ---
-- name: vector | install archive manager
+- name: Vector | install archive manager
   become: true
   ansible.builtin.yum:
     name:
